--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "mobx-react-devtools": "^4.2.5"
   }
 }
