--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
+  "presets": [
+    "es2015",
+    "stage-1"
+  ],
   "plugins": [
-    "transform-class-properties",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "transform-class-properties"
   ]
 }
