--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "mobx-react-devtools": "^4.2.5"
+    "mobx-react-devtools": "^4.2.5",
+    "babel-plugin-transform-decorators": "^6.13.0"
   }
 }
