--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "meteor run"
   },
-  "dependencies": {,
+  "dependencies": {
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "meteor-node-stubs": "~0.2.0",
