--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "lodash": "^4.15.0",
     "meteor-node-stubs": "~0.2.0",
     "mobx": "^2.4.4",
     "mobx-react": "^3.5.5",
