--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
   "presets": [
+    "meteor",
+    "react",
     "es2015",
-    "stage-1"
+    "stage-0"
   ],
   "plugins": [
     "transform-decorators-legacy",
