--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
-    "mobx-react-devtools": "^4.2.5"
+    "mobx-react-devtools": "^4.2.5",
+    "autoprefixer": "^6.3.1"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
+    }
   }
 }
