--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "d3": "^4.2.2",
     "lodash": "^4.15.0",
     "meteor-node-stubs": "~0.2.0",
     "mobx": "^2.4.4",
     "mobx-react": "^3.5.5",
+    "perfect-scrollbar": "^0.6.12",
     "react": "^15.1.0",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-meteor": "^6.12.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-es2015": "^6.14.0",
