--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "d3": "^4.2.2",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.6",
     "meteor-node-stubs": "~0.2.0",
     "mobx": "^2.4.4",
     "mobx-react": "^3.5.5",
     "perfect-scrollbar": "^0.6.12",
     "react": "^15.1.0",
     "react-addons-pure-render-mixin": "^15.1.0",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
