--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "d3": "^4.2.2",
-    "lodash": "^4.16.6",
-    "meteor-node-stubs": "~0.2.0",
-    "mobx": "^2.4.4",
-    "mobx-react": "^3.5.5",
-    "perfect-scrollbar": "^0.6.12",
-    "react": "^15.1.0",
-    "react-addons-pure-render-mixin": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "babel-runtime": "^6.18.0",
+    "d3": "^4.3.0",
+    "lodash": "^4.17.2",
+    "meteor-node-stubs": "^0.2.4",
+    "mobx": "^2.6.3",
+    "mobx-react": "^3.5.9",
+    "react": "^15.4.0",
+    "react-addons-pure-render-mixin": "^15.4.0",
+    "react-dom": "^15.4.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.11.5",
+    "autoprefixer": "^6.3.1",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-meteor": "^6.12.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "mobx-react-devtools": "^4.2.5",
-    "autoprefixer": "^6.3.1"
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-meteor": "^6.14.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "mobx-react-devtools": "^4.2.9"
   },
   "postcss": {
     "plugins": {
