--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mobx-react": "^3.5.9",
     "react": "^15.4.0",
     "react-addons-pure-render-mixin": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "semantic-ui-react": "^0.61.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
