--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "meteor-node-stubs": "^0.2.4",
     "mobx": "^2.6.3",
     "mobx-react": "^3.5.9",
+    "rc-slider": "^5.3.4",
     "react": "^15.4.0",
     "react-addons-pure-render-mixin": "^15.4.0",
     "react-dom": "^15.4.0",
