--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "d3": "^4.3.0",
+    "indexof": "0.0.1",
     "lodash": "^4.17.2",
     "meteor-node-stubs": "^0.2.4",
     "mobx": "^2.6.3",
