--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "private": true,
   "scripts": {
     "dev": "set MONGO_URL=mongodb://uncharted:uncharted@ds139655.mlab.com:39655/uncharted && set METEOR_OFFLINE_CATALOG=1 && meteor",
+    "prod": "set MONGO_URL=mongodb://mwebapp:mwebapp3253784@aws-us-east-1-portal.8.dblayer.com:15187/knowledge4all",
     "start": "meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "d3": "^4.3.0",
+    "handsontable": "^0.28.4",
     "indexof": "0.0.1",
     "lodash": "^4.17.2",
     "meteor-node-stubs": "^0.2.4",
     "mobx": "^2.6.3",
     "mobx-react": "^3.5.9",
+    "pikaday": "^1.5.1",
     "rc-slider": "^5.3.4",
     "react": "^15.4.0",
     "react-addons-pure-render-mixin": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-mounter": "^1.2.0",
+    "react-router": "^3.0.0",
     "semantic-ui-react": "^0.61.1"
   },
   "devDependencies": {
