--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.4.0",
     "react-mounter": "^1.2.0",
     "react-router": "^3.0.0",
+    "save-svg-as-png": "^1.0.3",
     "semantic-ui-react": "^0.61.1"
   },
   "devDependencies": {
