--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "d3": "^4.3.0",
-    "handsontable": "^0.28.4",
+    "handsontable": "^0.29.0",
     "indexof": "0.0.1",
     "lodash": "^4.17.2",
     "meteor-node-stubs": "^0.2.4",
@@ -23,7 +23,8 @@
     "react-mounter": "^1.2.0",
     "react-router": "^3.0.0",
     "save-svg-as-png": "^1.0.3",
-    "semantic-ui-react": "^0.61.1"
+    "semantic-ui-react": "^0.61.1",
+    "zeroclipboard": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
