--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
+    "bcrypt": "^1.0.1",
     "d3": "^4.3.0",
-    "handsontable": "^0.29.0",
+    "handsontable": "^0.29.2",
     "indexof": "0.0.1",
     "lodash": "^4.17.2",
     "meteor-node-stubs": "^0.2.4",
@@ -25,7 +26,7 @@
     "zeroclipboard": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
+    "autoprefixer": "^6.6.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
