--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "uncharted",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "start2": "meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
