--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "start2": "meteor run"
+    "start2": "meteor run",
+    "start3": "meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
